--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-30  Clytie Siddall <clytie@riverland.net.au>
+
+	* vi.po: Updated Vietnamese translation.
+
 2005-12-28  Marcel Telka  <marcel@telka.sk>
 
 	* sk.po: Updated Slovak translation.
