--- a/po/es.po
+++ b/po/es.po
@@ -1,3 +1,4 @@
+# translation of es.po to Spanish
 # Spanish translation of es
 # translation of es.po to
 # traducción de es.po al Spanish
@@ -16,14 +17,14 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-12-21 02:22+0100\n"
-"PO-Revision-Date: 2005-12-21 02:27+0100\n"
+"PO-Revision-Date: 2005-12-31 14:36+0100\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
-"X-Generator: KBabel 1.10.2\n"
+"X-Generator: KBabel 1.9.1\n"
 
 # components/help/hyperbola-filefmt.c:398
 # components/help/hyperbola-filefmt.c:671
@@ -466,8 +467,7 @@ msgstr "Nombre del icono de la papelera del escritorio"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:28
 msgid "Enable 'special' flags in file preferences dialog"
-msgstr ""
-"Activar los atributos «especiales» en el diálogo de preferencias de archivo"
+msgstr "Activar los atributos «especiales» en el diálogo de preferencias de archivo"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:29
 msgid "Enables the classic Nautilus behavior, where all windows are browsers"
@@ -518,8 +518,7 @@ msgstr ""
 "archivos."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:35
-msgid ""
-"If set to true, newly opened windows will have the location bar visible."
+msgid "If set to true, newly opened windows will have the location bar visible."
 msgstr ""
 "Si se establece a 'true', las ventanas nuevas abiertas tendrán la barra de "
 "lugar visible."
@@ -700,8 +699,7 @@ msgstr ""
 "ventanas nuevas."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:57
-msgid ""
-"If true, labels will be placed beside icons rather than underneath them."
+msgid "If true, labels will be placed beside icons rather than underneath them."
 msgstr ""
 "Si es 'true', las etiquetas se colocarán a los lados de los iconos en lugar "
 "de por debajo de éstos."
@@ -888,13 +886,11 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:88
 msgid "The default width of the side pane in new windows."
-msgstr ""
-"La anchura predeterminada para el panel lateral en las ventanas nuevas."
+msgstr "La anchura predeterminada para el panel lateral en las ventanas nuevas."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:89
 msgid "The font description used for the icons on the desktop."
-msgstr ""
-"La descripción de la tipografía usada para los iconos en el escritorio."
+msgstr "La descripción de la tipografía usada para los iconos en el escritorio."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:90
 msgid ""
@@ -906,8 +902,7 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:91
 msgid "The side pane view to show in newly opened windows."
-msgstr ""
-"La vista del panel lateral que se mostrará en la ventanas nuevas abiertas."
+msgstr "La vista del panel lateral que se mostrará en la ventanas nuevas abiertas."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:92
 msgid ""
@@ -996,13 +991,11 @@ msgstr "Indica si se ha establecido un fondo predeterminado de carpeta."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:106
 msgid "Whether a custom default side pane background has been set."
-msgstr ""
-"Indica si se ha establecido un fondo predeterminado en el panel lateral."
+msgstr "Indica si se ha establecido un fondo predeterminado en el panel lateral."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:107
 msgid "Whether to ask for confirmation when moving files to trash"
-msgstr ""
-"Indica si se debe solicitar una confirmación al mover archivos a la papelera"
+msgstr "Indica si se debe solicitar una confirmación al mover archivos a la papelera"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:108
 msgid "Whether to enable immediate deletion"
@@ -1271,12 +1264,10 @@ msgstr "El emblema no puede instalarse."
 
 #: ../libnautilus-private/nautilus-emblem-utils.c:198
 msgid "Sorry, but you must specify a non-blank keyword for the new emblem."
-msgstr ""
-"Lo siento, pero debe especificar una descripción para el emblema nuevo."
+msgstr "Lo siento, pero debe especificar una descripción para el emblema nuevo."
 
 #: ../libnautilus-private/nautilus-emblem-utils.c:203
-msgid ""
-"Sorry, but emblem keywords can only contain letters, spaces and numbers."
+msgid "Sorry, but emblem keywords can only contain letters, spaces and numbers."
 msgstr ""
 "Lo siento, pero la descripción del emblema sólo puede contener letras, "
 "espacios y números."
@@ -2631,8 +2622,7 @@ msgstr ""
 # src/nautilus-window-manage-views.c:1287
 #: ../libnautilus-private/nautilus-program-choosing.c:613
 #: ../src/nautilus-window-manage-views.c:1475
-msgid ""
-"Check that the spelling is correct and that your proxy settings are correct."
+msgid "Check that the spelling is correct and that your proxy settings are correct."
 msgstr ""
 "Compruebe que lo que escribió es correcto y que su configuración del proxy "
 "es correcta."
@@ -2680,8 +2670,7 @@ msgid "This drop target only supports local files."
 msgstr "Este destino donde soltar sólo soporta archivos locales."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:920
-msgid ""
-"To open non-local files copy them to a local folder and then drop them again."
+msgid "To open non-local files copy them to a local folder and then drop them again."
 msgstr ""
 "Para abrir archivos no locales cópielos a una carpeta local y luego "
 "suéltelos nuevamente."
@@ -2822,8 +2811,7 @@ msgstr "Cambiar el _fondo del escritorio"
 
 #. tooltip
 #: ../src/file-manager/fm-desktop-icon-view.c:701
-msgid ""
-"Show a window that lets you set your desktop background's pattern or color"
+msgid "Show a window that lets you set your desktop background's pattern or color"
 msgstr ""
 "Muestra una ventana que le deja configurar el patrón del fondo o el color de "
 "su escritorio"
@@ -2883,7 +2871,7 @@ msgstr "¿Seguro que desea abrir todos los archivos?"
 #, c-format
 msgid "This will open %d separate window."
 msgid_plural "This will open %d separate windows."
-msgstr[0] "Esto abrirá %0d una ventana separada."
+msgstr[0] "Esto abrirá %d ventana separada."
 msgstr[1] "Esto abrirá %d ventanas separadas."
 
 # src/file-manager/fm-directory-view.c:1855
@@ -2896,10 +2884,8 @@ msgstr "¿Está seguro que desea borrar permanentemente «%s»?"
 #: ../src/file-manager/fm-directory-view.c:984
 #, c-format
 msgid "Are you sure you want to permanently delete the %d selected item?"
-msgid_plural ""
-"Are you sure you want to permanently delete the %d selected items?"
-msgstr[0] ""
-"¿Está seguro de que desea borrar permanentemente el%0d elemento seleccionado?"
+msgid_plural "Are you sure you want to permanently delete the %d selected items?"
+msgstr[0] "¿Está seguro de que desea borrar permanentemente el elemento seleccionado? %d"
 msgstr[1] ""
 "¿Está seguro de que desea borrar permanentemente los %d elementos "
 "seleccionados?"
@@ -3020,8 +3006,7 @@ msgstr "%s%s, %s"
 #: ../src/file-manager/fm-directory-view.c:2303
 #, c-format
 msgid "The folder \"%s\" contains more files than Nautilus can handle."
-msgstr ""
-"La carpeta «%s» contiene más archivos de los que Nautilus puede manejar."
+msgstr "La carpeta «%s» contiene más archivos de los que Nautilus puede manejar."
 
 #: ../src/file-manager/fm-directory-view.c:2309
 msgid "Some files will not be displayed."
@@ -3029,8 +3014,7 @@ msgstr "Algunos archivos no se mostrarán."
 
 #: ../src/file-manager/fm-directory-view.c:3706
 msgid "Cannot move file to trash, do you want to delete immediately?"
-msgstr ""
-"No puede mover el archivo a la papelera. ¿Quiere borrarlo inmediatamente?"
+msgstr "No puede mover el archivo a la papelera. ¿Quiere borrarlo inmediatamente?"
 
 #: ../src/file-manager/fm-directory-view.c:3707
 #, c-format
@@ -3039,8 +3023,7 @@ msgstr "El archivo «%s» no puede moverse a la papelera."
 
 #: ../src/file-manager/fm-directory-view.c:3711
 msgid "Cannot move items to trash, do you want to delete them immediately?"
-msgstr ""
-"No puede mover los elementos a la papelera. ¿Quiere borrarlos inmediatamente?"
+msgstr "No puede mover los elementos a la papelera. ¿Quiere borrarlos inmediatamente?"
 
 # src/file-manager/fm-directory-view.c:2669
 #: ../src/file-manager/fm-directory-view.c:3712
@@ -3049,8 +3032,7 @@ msgid "None of the %d selected items can be moved to the Trash"
 msgstr "Ninguno de los %d elementos seleccionados puede moverse a la papelera"
 
 #: ../src/file-manager/fm-directory-view.c:3714
-msgid ""
-"Cannot move some items to trash, do you want to delete these immediately?"
+msgid "Cannot move some items to trash, do you want to delete these immediately?"
 msgstr ""
 "No puede mover algunos de los elementos a la papelera, ¿quiere borrarlos "
 "directamente?"
@@ -3231,21 +3213,16 @@ msgstr "«%s» se copiará si selecciona el comando «Pegar»"
 #: ../src/file-manager/fm-directory-view.c:5865
 #, c-format
 msgid "The %d selected item will be moved if you select the Paste command"
-msgid_plural ""
-"The %d selected items will be moved if you select the Paste command"
+msgid_plural "The %d selected items will be moved if you select the Paste command"
 msgstr[0] "El elemento seleccionado se moverá si selecciona el comando «Pegar»"
-msgstr[1] ""
-"Los %d elementos seleccionados se moverán si selecciona el comando «Pegar»"
+msgstr[1] "Los %d elementos seleccionados se moverán si selecciona el comando «Pegar»"
 
 #: ../src/file-manager/fm-directory-view.c:5872
 #, c-format
 msgid "The %d selected item will be copied if you select the Paste command"
-msgid_plural ""
-"The %d selected items will be copied if you select the Paste command"
-msgstr[0] ""
-"El elemento seleccionado se copiará si selecciona el comando «Pegar»"
-msgstr[1] ""
-"Los %d elementos seleccionados se copiarán si selecciona el comando «Pegar»"
+msgid_plural "The %d selected items will be copied if you select the Paste command"
+msgstr[0] "El elemento seleccionado se copiará si selecciona el comando «Pegar»"
+msgstr[1] "Los %d elementos seleccionados se copiarán si selecciona el comando «Pegar»"
 
 #: ../src/file-manager/fm-directory-view.c:5966
 #: ../src/file-manager/fm-tree-view.c:983
@@ -3287,8 +3264,7 @@ msgstr "Abrir _con"
 #. name, stock id, label
 #: ../src/file-manager/fm-directory-view.c:6517
 msgid "Choose a program with which to open the selected item"
-msgstr ""
-"Selecciona un programa con el cual poder abrir el elemento seleccionado"
+msgstr "Selecciona un programa con el cual poder abrir el elemento seleccionado"
 
 # src/file-manager/fm-directory-view.c:2151
 #. name, stock id
@@ -3300,8 +3276,7 @@ msgstr "_Propiedades"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6520
 msgid "View or modify the properties of each selected item"
-msgstr ""
-"Muestra o permite modificar las propiedades de cada elemento seleccionado"
+msgstr "Muestra o permite modificar las propiedades de cada elemento seleccionado"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6528
@@ -3394,15 +3369,13 @@ msgstr "Muestra la carpeta que contiene los scripts que aparecen en este menú"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6574
 msgid "Prepare the selected files to be moved with a Paste command"
-msgstr ""
-"Prepara los archivos seleccionados para moverlos con un comando «Pegar»"
+msgstr "Prepara los archivos seleccionados para moverlos con un comando «Pegar»"
 
 #. name, stock id
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6578
 msgid "Prepare the selected files to be copied with a Paste command"
-msgstr ""
-"Prepara los archivos seleccionados para copiarse con un comando «Pegar»"
+msgstr "Prepara los archivos seleccionados para copiarse con un comando «Pegar»"
 
 #. name, stock id
 #. label, accelerator
@@ -3444,8 +3417,7 @@ msgstr "_Patrón de selección"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6596
 msgid "Select items in this window matching a given pattern"
-msgstr ""
-"Selecciona los elementos en esta ventana que coincidan con un patrón dado"
+msgstr "Selecciona los elementos en esta ventana que coincidan con un patrón dado"
 
 # src/file-manager/fm-directory-view.c:2148
 #. name, stock id
@@ -3774,8 +3746,7 @@ msgstr "Arrastrar y soltar no está soportado."
 
 #: ../src/file-manager/fm-directory-view.c:9146
 msgid "Drag and drop is only supported on local file systems."
-msgstr ""
-"Arrastrar y soltar sólo está soportado en los sistemas de archivos locales."
+msgstr "Arrastrar y soltar sólo está soportado en los sistemas de archivos locales."
 
 #: ../src/file-manager/fm-directory-view.c:9198
 #: ../src/file-manager/fm-directory-view.c:9295
@@ -3814,8 +3785,7 @@ msgstr "Lanzador"
 # src/nautilus-window-manage-views.c:648
 #: ../src/file-manager/fm-error-reporting.c:59
 #, c-format
-msgid ""
-"You do not have the permissions necessary to view the contents of \"%s\"."
+msgid "You do not have the permissions necessary to view the contents of \"%s\"."
 msgstr "No tiene los permisos suficientes para ver el contenido de «%s»."
 
 #: ../src/file-manager/fm-error-reporting.c:63
@@ -3837,18 +3807,15 @@ msgstr "El contenido de la carpeta no se pudo mostrar."
 # src/file-manager/fm-error-reporting.c:50
 #: ../src/file-manager/fm-error-reporting.c:107
 #, c-format
-msgid ""
-"The name \"%s\" is already used in this folder. Please use a different name."
+msgid "The name \"%s\" is already used in this folder. Please use a different name."
 msgstr ""
 "El nombre «%s» ya se está usando en esta carpeta. Por favor use un nombre "
 "distinto."
 
 #: ../src/file-manager/fm-error-reporting.c:112
 #, c-format
-msgid ""
-"There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
-msgstr ""
-"No existe un «%s» en esta carpeta. ¿Quizás acaba de moverse o borrarse?"
+msgid "There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
+msgstr "No existe un «%s» en esta carpeta. ¿Quizás acaba de moverse o borrarse?"
 
 # src/file-manager/fm-error-reporting.c:55
 #: ../src/file-manager/fm-error-reporting.c:117
@@ -3893,8 +3860,7 @@ msgstr "El elemento no se pudo renombrar."
 # src/file-manager/fm-error-reporting.c:85
 #: ../src/file-manager/fm-error-reporting.c:168
 #, c-format
-msgid ""
-"You do not have the permissions necessary to change the group of \"%s\"."
+msgid "You do not have the permissions necessary to change the group of \"%s\"."
 msgstr "No tiene los permisos suficientes para cambiar el grupo de «%s»."
 
 #: ../src/file-manager/fm-error-reporting.c:172
@@ -3936,8 +3902,7 @@ msgstr "El propietario no pudo cambiarse."
 # src/file-manager/fm-error-reporting.c:137
 #: ../src/file-manager/fm-error-reporting.c:238
 #, c-format
-msgid ""
-"Couldn't change the permissions of \"%s\" because it is on a read-only disk"
+msgid "Couldn't change the permissions of \"%s\" because it is on a read-only disk"
 msgstr ""
 "No se ha podido cambiar los permisos de «%s» porque está en un disco de sólo "
 "lectura"
@@ -5015,8 +4980,7 @@ msgstr "<span weight=\"bold\">Descripciones de los iconos</span>"
 
 #: ../src/nautilus-file-management-properties.glade.h:24
 msgid "<span weight=\"bold\">Icon View Defaults</span>"
-msgstr ""
-"<span weight=\"bold\">Valores predeterminados para la vista de iconos</span>"
+msgstr "<span weight=\"bold\">Valores predeterminados para la vista de iconos</span>"
 
 #: ../src/nautilus-file-management-properties.glade.h:25
 msgid "<span weight=\"bold\">List Columns</span>"
@@ -5024,8 +4988,7 @@ msgstr "<span weight=\"bold\">Columnas de la lista</span>"
 
 #: ../src/nautilus-file-management-properties.glade.h:26
 msgid "<span weight=\"bold\">List View Defaults</span>"
-msgstr ""
-"<span weight=\"bold\">Valores predeterminados para la vista de lista</span>"
+msgstr "<span weight=\"bold\">Valores predeterminados para la vista de lista</span>"
 
 #: ../src/nautilus-file-management-properties.glade.h:27
 msgid "<span weight=\"bold\">Other Previewable Files</span>"
@@ -5045,8 +5008,7 @@ msgstr "<span weight=\"bold\">Papelera</span>"
 
 #: ../src/nautilus-file-management-properties.glade.h:31
 msgid "<span weight=\"bold\">Tree View Defaults</span>"
-msgstr ""
-"<span weight=\"bold\">Valores predeterminados para la vista de árbol</span>"
+msgstr "<span weight=\"bold\">Valores predeterminados para la vista de árbol</span>"
 
 # libnautilus-private/nautilus-global-preferences.c:587
 #: ../src/nautilus-file-management-properties.glade.h:32
@@ -5099,8 +5061,7 @@ msgstr ""
 # src/file-manager/fm-icon-text-window.c:267
 #: ../src/nautilus-file-management-properties.glade.h:44
 msgid "Choose the order of information to appear in the list view."
-msgstr ""
-"Seleccione el orden en que la información aparecerá en la vista de lista."
+msgstr "Seleccione el orden en que la información aparecerá en la vista de lista."
 
 # src/file-manager/dfos-xfer.c:763
 #: ../src/nautilus-file-management-properties.glade.h:45
@@ -5553,8 +5514,7 @@ msgstr "L_impiar el histórico"
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:438
 msgid "Clear contents of Go menu and Back/Forward lists"
-msgstr ""
-"Limpia el contenido del menú «Ir a» y las listas de «Atrás» y «Adelante»"
+msgstr "Limpia el contenido del menú «Ir a» y las listas de «Atrás» y «Adelante»"
 
 # src/nautilus-window-menus.c:1235
 #: ../src/nautilus-navigation-window-menus.c:440
@@ -5578,8 +5538,7 @@ msgstr "_Editar los marcadores"
 #: ../src/nautilus-navigation-window-menus.c:444
 #: ../src/nautilus-spatial-window.c:843
 msgid "Display a window that allows editing the bookmarks in this menu"
-msgstr ""
-"Muestra una ventana que permite editar los marcadores que hay en este menú"
+msgstr "Muestra una ventana que permite editar los marcadores que hay en este menú"
 
 #: ../src/nautilus-navigation-window-menus.c:446
 #: ../src/nautilus-spatial-window.c:845
@@ -5601,8 +5560,7 @@ msgstr "Barra _principal"
 #. label, accelerator
 #: ../src/nautilus-navigation-window-menus.c:455
 msgid "Change the visibility of this window's main toolbar"
-msgstr ""
-"Cambia la visibilidad de esta barra de herramientas principal de esta ventana"
+msgstr "Cambia la visibilidad de esta barra de herramientas principal de esta ventana"
 
 # libnautilus-private/nautilus-global-preferences.c:165
 #. is_active
@@ -6052,8 +6010,7 @@ msgstr "provee un estado visual"
 msgid ""
 "Do you want to remove any bookmarks with the non-existing location from your "
 "list?"
-msgstr ""
-"¿Quiere quitar de su lista los marcadores que tengan un lugar no existente?"
+msgstr "¿Quiere quitar de su lista los marcadores que tengan un lugar no existente?"
 
 # src/nautilus-window-menus.c:599
 #: ../src/nautilus-window-bookmarks.c:99
@@ -6840,3 +6797,4 @@ msgstr "Ver sus servidores de red en el administrador de archivos Nautilus"
 
 #~ msgid "Web"
 #~ msgstr "Web"
+
