Updated Norwegian bokmål translation Updated Norwegian bokmål
2006-01-06  Kjartan Maraas <kmaraas@gnome.org>

	* nb.po: Updated Norwegian bokmål translation
	* no.po: Updated Norwegian bokmål translation

--- a/po/nb.po
+++ b/po/nb.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus 2.13.x\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-01-02 01:30+0100\n"
-"PO-Revision-Date: 2006-01-02 01:35+0100\n"
+"POT-Creation-Date: 2006-01-06 18:53+0100\n"
+"PO-Revision-Date: 2006-01-06 18:54+0100\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
@@ -569,13 +569,10 @@ msgstr ""
 "fil."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:49
-#, fuzzy
 msgid ""
 "If this is set to true, an icon linking to the Network Servers view will be "
 "put on the desktop."
-msgstr ""
-"Et ikon med en lenke til papirkurven plasseres på skrivebordet hvis denne "
-"settes til «true»."
+msgstr "Et ikon med en lenke til nettverk plasseres på skrivebordet hvis denne settes til «true»."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:50
 msgid ""
@@ -686,9 +683,8 @@ msgid "Nautilus uses the users home folder as the desktop"
 msgstr "Nautilus bruker brukerens hjemmemappe som skrivebord"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:66
-#, fuzzy
 msgid "Network Servers icon visible on the desktop"
-msgstr "Vis Hjem-ikonet på skrivebordet"
+msgstr "Nettverk-ikonet er synlig på skrivebordet"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:67
 msgid "Only show folders in the tree sidebar"
