--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-06  Kjartan Maraas <kmaraas@gnome.org>
+
+	* nb.po: Updated Norwegian bokmål translation
+	* no.po: Updated Norwegian bokmål translation
+
 2006-01-03  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
