--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-08  Nikos Charonitakis  <nikosx@gmail.com>
+
+	* el.po: Updated Greek translation.
+
 2006-01-06  Kjartan Maraas <kmaraas@gnome.org>
 
 	* nb.po: Updated Norwegian bokmål translation
