*** empty log message ***

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-09  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gl.po: Updated Galician Translation.
+
 2006-01-08  Nikos Charonitakis  <nikosx@gmail.com>
 
 	* el.po: Updated Greek translation.
