--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-01-11  Ryan Lortie  <desrt@desrt.ca>
+
+	* src/nautilus-location-entry.c (try_to_expand_path): Use strlen()
+	instead of g_utf8_strlen() since gtk_editable_insert_text takes
+	the number of bytes (not number of characters).  Fixes #324406.
+
 2006-01-10  Jürg Billeter  <j@bitron.ch>
 
 	* libnautilus-private/nautilus-desktop-link.c:
