--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,41 @@
+2006-01-11  Christian Neumair  <chris@gnome-de.org>
+
+	* libnautilus-private/nautilus-mime-actions.c:
+	(nautilus_mime_get_default_application_for_files),
+	(intersect_application_lists),
+	(nautilus_mime_get_open_with_applications_for_files),
+	(nautilus_mime_has_any_applications_for_files):
+	* libnautilus-private/nautilus-mime-actions.h:
+	Add file list helpers for getting associated applications.
+
+	* libnautilus-private/nautilus-program-choosing.c:
+	* libnautilus-private/nautilus-program-choosing.h:
+	(nautilus_launch_application):
+	Allow to pass multiple files per application launch.
+
+	* src/nautilus-information-panel.c:
+	(command_button_callback):
+	Port to new API.
+
+	* src/file-manager/fm-directory-view.c:
+	(application_launch_parameters_new),
+	(application_launch_parameters_free),
+	(fm_directory_view_launch_application),
+	(fm_directory_view_chose_application_callback),
+	(application_selected_cb),
+	(open_with_launch_application_callback),
+	(add_application_to_open_with_menu), (reset_open_with_menu),
+	(real_update_menus), (list_to_parameters_foreach),
+	(mime_application_hash),
+	(fm_directory_view_make_activation_parameters),
+	(activate_callback):
+	Support activation of multiple files at once, correctly figure out
+	their associated applications. Fixes #105653.
+
+	* src/file-manager/fm-directory-view.c:
+	(activate_callback):
+	ref/unref the view before/after operating on it. Fixes #326231.
+
 2006-01-11  Ryan Lortie  <desrt@desrt.ca>
 
 	* src/nautilus-location-entry.c (try_to_expand_path): Use strlen()
