updated the default thumbnailing value (Fixes #317587)
2006-01-11  Sebastien Bacher  <seb128@debian.org>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	updated the default thumbnailing value (Fixes #317587)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-11  Sebastien Bacher  <seb128@debian.org>
+
+	* libnautilus-private/apps_nautilus_preferences.schemas.in:
+	updated the default thumbnailing value (Fixes #317587)
+
 2006-01-11  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-mime-actions.c:
