--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-01-12  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-error-reporting.c: (rename_callback),
+	(cancel_rename_callback), (cancel_rename), (fm_rename_file):
+	Don't call eel_timed_wait_stop when the timer triggers. (#302735)
+	
 2006-01-11  Sebastien Bacher  <seb128@debian.org>
 
 	* libnautilus-private/apps_nautilus_preferences.schemas.in:
