--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-01-12  Christian Neumair  <chris@gnome-de.org>
+
+	* src/nautilus-bookmarks-window.c: (update_bookmark_from_text):
+	Update current bookmark name/pixbuf on changes. Partially fixes
+	#44906.
+
 2006-01-12  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-error-reporting.c: (rename_callback),
