--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-01-14  Martin Wehner  <martin.wehner@gmail.com>
+
+	* libnautilus-private/nautilus-file-operations.c:
+	(progress_dialog_set_to_from_item_text):
+	Handle hostnames in the progress dialog strings more robustly.
+	Fixes #325737.
+	Based on a batch from Anilkumar B. <anilkumar.bacheli@wipro.com>
+
 2006-01-12  Christian Neumair  <chris@gnome-de.org>
 
 	* src/nautilus-bookmarks-window.c: (update_bookmark_from_text):
