Handle the mount/unmount error case where the mount system handled the
2006-01-16  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-directory-view.c:
	Handle the mount/unmount error case where the mount system handled
	the error dialogs.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-01-16  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-directory-view.c:
+	Handle the mount/unmount error case where the mount system handled
+	the error dialogs.
+
 2006-01-16  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-places-sidebar.c: (add_place), (update_places),
