Add search support for the Tracker indexing engine.
2006-01-16  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	* libnautilus-private/Makefile.am:
	* libnautilus-private/nautilus-search-engine-tracker.[ch]:
	* libnautilus-private/nautilus-search-engine.c:
	Add search support for the Tracker indexing engine.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2006-01-16  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	* libnautilus-private/Makefile.am:
+	* libnautilus-private/nautilus-search-engine-tracker.[ch]:
+	* libnautilus-private/nautilus-search-engine.c:
+	Add search support for the Tracker indexing engine.
+
+2006-01-16  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-directory-view.c:
 	Handle the mount/unmount error case where the mount system handled
 	the error dialogs.
