Update for release.
2006-01-16  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+Major changes in 2.13.4 are:
+* Open modules with BIND_LOCAL
+* Disable network icon on desktop by default
+* Add Network to places menu
+* Fix sort by atime
+* Some HIG fixes
+* Add support for searching for custom mime type
+* store custom icons for folders as relative patch if in folder
+* Much better activation of multiple files
+* Bumped the default image size thumbnailing limit
+* Handle new background image zooming mode
+* Add optional support for Tracker indexer
+* Fix leaks & crashes
+
 Major changes in 2.13.3 are:
 * Added initial support for search
 * Fixed memleaks
