--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-01-16  Alexander Larsson  <alexl@redhat.com>
 
+	* NEWS:
+	Update for release.
+
+2006-01-16  Alexander Larsson  <alexl@redhat.com>
+
 	* configure.in:
 	* libnautilus-private/Makefile.am:
 	* libnautilus-private/nautilus-search-engine-tracker.[ch]:
