--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2006-01-16  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump.
+
+=== nautilus 2.13.4 ===
+
+2006-01-16  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release.
 
