Updated Canadian English translation.
2006-01-16  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-16  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 === nautilus 2.13.4 ===
 
 2006-01-15  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
