--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-17  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Tino Meinen.
+
 2006-01-16  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
