--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-01-18  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/nautilus-window-bookmarks.c: (nautilus_bookmarks_exiting):
+	Destroy the bookmarks window on shutdown.
+
+	* src/nautilus-bookmarks-window.c: (on_window_destroy_event):
+	Release the bookmark stores.
+
 2006-01-17  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-spatial-window.c:
