--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-18  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated.
+
 === nautilus 2.12.2 ===
 
 2005-11-20  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
