--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-18  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Updated Italian translation
+
 2006-01-18  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
