--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-19  Satoru SATOH <ss@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation
+
 2006-01-18  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation
@@ -9,7 +13,7 @@
 
 2006-01-18  Ankit Patel  <ankit644@yahoo.com>
 
-        * gu.po: Updated Gujarati Translation.
+	* gu.po: Updated Gujarati Translation.
 
 2006-01-17  Vincent van Adrighem  <adrighem@gnome.org>
 
