--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-19  Clytie Siddall <clytie@riverland.net.au>
+
+	* vi.po: Updated Vietnamese translation.
+
 2006-01-19  Satoru SATOH <ss@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation
