Fix a typo that makes the desktop directory monitors leak.
2006-01-21  Martin Wehner  <martin.wehner@gmail.com>

	* libnautilus-private/nautilus-desktop-directory-file.c:
	(desktop_directory_file_monitor_add):
	Fix a typo that makes the desktop directory monitors leak.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-01-21  Martin Wehner  <martin.wehner@gmail.com>
+
+	* libnautilus-private/nautilus-desktop-directory-file.c:
+	(desktop_directory_file_monitor_add):
+	Fix a typo that makes the desktop directory monitors leak.
+
 2006-01-20  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-icon-factory.c: (scale_icon):
