--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-01-21  Martin Wehner  <martin.wehner@gmail.com>
 
+	* src/nautilus-bookmark-list.c: (get_default_bookmark_name):
+	Don't leak title.
+
+2006-01-21  Martin Wehner  <martin.wehner@gmail.com>
+
 	* libnautilus-private/nautilus-desktop-directory-file.c:
 	(desktop_directory_file_monitor_add):
 	Fix a typo that makes the desktop directory monitors leak.
