--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-25  Nickolay V. Shmyrev <nshmyrev@yandex.ru>
+
+	* ru.po: Update Russian translation by 
+	Artem Tuchinsky <tuchinsky@gmail.com>.
+
 2006-01-23  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
